--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT = 4010 # server port number
 DATABASE_URL="mongodb+srv://badgujjar9991:IrwiH7FhYSLBwnv0@craves-database.ggtyzwe.mongodb.net/"
 JWT_SECRET_KEY="craves_jwt_key"
+ENCRYPTION_KEY="craves_encryption_key"
 MAIL_HOST = smtp.gmail.com 
 MAIL_USER = tarunjaat0711@gmail.com
 MAIL_PASS = ilhcvjhbzbnvguvy
